# tokenpayback

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish.yml  weekly.yml
dashboard/: app.js  data.json  index.html
reports/: .gitkeep
tokenpayback/: __init__.py  analytics.py  classify_sessions.py  cli.py  cost.py  demo_data.py  fingerprint.py  output.py  parse_claude.py  proxy.py  roi.py  role_value.py  taxonomy.py  util.py  value_class.py  value_model.py
tokenpayback/dashboard/: app.js  data.json  index.html  styles.css
tokenpayback/parsers/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  hermes.py  openclaw.py  openhuman.py  proxy_log.py
